tiny spacing fix

--- a/src/assets/styles/cmps/AppNav.scss
+++ b/src/assets/styles/cmps/AppNav.scss
@@ -34,7 +34,7 @@
 
         nav {
             .menu-nav>:nth-child(1) {
-                margin-right: 28px;
+                margin-right: 27px;
             }
         }
 
